# Data-Compression

AnalyseAlphaBet/: TrieTree.cpp
Huffman_Improved/: BitIoStream.cpp  CMakeLists.txt  HuffmanCoder.cpp  HuffmanCompress.cpp  HuffmanDecompress.cpp  main.cpp
adaptive arithmetic/: compress.cpp  decompress.cpp  makefile  new_binary_bin  output
files/: BST.out  binarySerach.out  bubbleSort.out  matrixMultiply.out  palindrom.out
huffman/: CMakeLists.txt  sample.c
